@@ -1,5 +1,10 @@
 2003-07-21  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* gui/oprof_start.cpp: thinko in has_unique_event(), don't warn for
+	  no counter with CPU_TIMER_INT
+
+2003-07-21  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* gui/oprof_start.cpp: allow to de-select a counter
 
 2003-07-21  John Levon  <levon@movementarian.org>
